add URL canonical

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description"
     content="Porfolio construido como proyecto final para obtener el certificado de Oracle Next Education">
   <!--REVISAR CUNADO SE TENGA EL DOMINIO DE LA PAGINA-->
-  <link rel="canonical" href="#" />
+  <link rel="canonical" href="https://alexanderpolanco.github.io/chanllage-one-portfolio/" />
   <!-- AGREGA EL ICONO DE LA PAGINA
   <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon" href="./assets/favicon.png" /> -->
@@ -17,8 +17,9 @@
   <meta name="theme-color" content="#0a3871" />
   <!--ETIQUETAS PARA HABILITAR EL FORMATO DE CARD AL COMPARTIR ENLACE EN LAS REDES SOLCIALES -->
   <meta property="og:title" content="Portfolio Web Developer - Alexander Polanco" />
-  <meta property="og:url" content="" />
-  <meta property="og:image" content="" />
+  <meta property="og:url" content="https://alexanderpolanco.github.io/chanllage-one-portfolio/" />
+  <meta property="og:image"
+    content="https://alexanderpolanco.github.io/chanllage-one-portfolio/assets/portfolio-web.jpg" />
   <meta name="twitter:card" content="Portfolio Web Developer - Alexander Polanco">
   </meta>
   <meta name="twitter:site" content="@JosemendezCL" /> <!--cuenta de twitter-->
