--- a/index.html
+++ b/index.html
@@ -198,9 +198,8 @@
       <div class="group-certifications">
         <div class="container-certifications">
           <div class="container-logo-certificartion">
-            <img width="48"
-              src="https://media.licdn.com/dms/image/D4D0BAQGxDpCf6Cm0xQ/company-logo_100_100/0/1701180993504/alura_latam_logo?e=1720656000&amp;v=beta&amp;t=ua18OVIGT_o8ZTDF4pEqYh7YM26rGC_zalhdruX7mOo"
-              loading="lazy" height="48" alt="Logotipo de Alura Latam" class="border-logo-certificartion">
+            <img width="48" src="./assets/alura_latam_logo.webp" loading="lazy" height="48"
+              alt="Logotipo de Alura Latam" class="border-logo-certificartion">
           </div>
           <div class="details-certification">
             <span>
@@ -222,8 +221,7 @@
         </div>
 
         <div class="container-certifications">
-          <div class="container-logo-certificartion"><img width="48"
-              src="https://media.licdn.com/dms/image/C4E0BAQGLKj3JHcof0w/company-logo_100_100/0/1630639684997/free_code_camp_logo?e=1720656000&v=beta&t=dWl5P8INXOfftxq6RdP7mUCCEQ6Czxg0_GrET8Unlno"
+          <div class="container-logo-certificartion"><img width="48" src="./assets/free_code_camp_logo.webp"
               loading="lazy" height="48" alt="Logotipo de freeCodeCamp" class="border-logo-certificartion">
           </div>
           <div class="details-certification">
@@ -245,8 +243,7 @@
         </div>
 
         <div class="container-certifications">
-          <div class="container-logo-certificartion"><img width="48"
-              src="https://media.licdn.com/dms/image/C4E0BAQGLKj3JHcof0w/company-logo_100_100/0/1630639684997/free_code_camp_logo?e=1720656000&v=beta&t=dWl5P8INXOfftxq6RdP7mUCCEQ6Czxg0_GrET8Unlno"
+          <div class="container-logo-certificartion"><img width="48" src="./assets/free_code_camp_logo.webp"
               loading="lazy" height="48" alt="Logotipo de freeCodeCamp" class="border-logo-certificartion">
           </div>
           <div class="details-certification">
@@ -268,9 +265,8 @@
         </div>
 
         <div class="container-certifications">
-          <div class="container-logo-certificartion"><img width="48"
-              src="https://media.licdn.com/dms/image/D4D0BAQGxDpCf6Cm0xQ/company-logo_100_100/0/1701180993504/alura_latam_logo?e=1720656000&amp;v=beta&amp;t=ua18OVIGT_o8ZTDF4pEqYh7YM26rGC_zalhdruX7mOo"
-              loading="lazy" height="48" alt="Logotipo de Alura Latam" class="border-logo-certificartion">
+          <div class="container-logo-certificartion"><img width="48" src="./assets/alura_latam_logo.webp" loading="lazy"
+              height="48" alt="Logotipo de Alura Latam" class="border-logo-certificartion">
           </div>
           <div class="details-certification">
             <span>
@@ -292,8 +288,7 @@
         </div>
 
         <div class="container-certifications">
-          <div class="container-logo-certificartion"><img width="48"
-              src="https://media.licdn.com/dms/image/C4E0BAQGLKj3JHcof0w/company-logo_100_100/0/1630639684997/free_code_camp_logo?e=1720656000&v=beta&t=dWl5P8INXOfftxq6RdP7mUCCEQ6Czxg0_GrET8Unlno"
+          <div class="container-logo-certificartion"><img width="48" src="./assets/free_code_camp_logo.webp"
               loading="lazy" height="48" alt="Logotipo de freeCodeCamp" class="border-logo-certificartion">
           </div>
           <div class="details-certification">
