--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           class="button featured-button ">Disponible para trabajar</a>
       </div>
       <h1>Hey, soy Alexander</h1>
-      <p>+10 años de experiencia.<strong>Técnico superior en informatica</strong> de Santiago, Chile
+      <p>+10 años de experiencia.<strong>Técnico superior en informática</strong> de Santiago, Chile
         CL. Especializado en el desarrollo de aplicaciones web.</p>
       <div id="buttons-contact">
         <a href="mailto:alexander.polanco@gmail.com" class="button contrast-button">
@@ -332,7 +332,7 @@
       </h3>
       <div class="container-about">
         <div class="description-about">
-          <p>Con más de diez años laborando en empresas del rubro de la tectología, donde he crecido profesionalmente
+          <p>Con más de diez años laborando en empresas del rubro de la tecnología, donde he crecido profesionalmente
             pasando por
             áreas de <span class="text-yellow">desarrollo de software </span> llegando a la <span
               class="text-yellow">gestión de proyectos</span>, en esta
