--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
           class="button featured-button ">Disponible para trabajar</a>
       </div>
       <h1>Hey, soy Alexander</h1>
-      <p>+10 años de experiencia.<strong>Técnico superior en informática</strong> de Santiago, Chile
+      <p>+10 años de experiencia en el rubro de sistemas. <strong>Técnico superior en informática</strong> de Santiago,
+        Chile
         CL. Especializado en el desarrollo de aplicaciones web.</p>
       <div id="buttons-contact">
         <a href="mailto:alexander.polanco@gmail.com" class="button contrast-button">
@@ -147,41 +148,147 @@
         </svg>
         <h3 class="project-tile">Proyectos</h3>
       </div>
-      <div class="group-project">
-        <div class="img-project">
-          <img
-            src="https://res.cloudinary.com/dode3agpj/image/upload/v1707952779/freecodecamp-portfolio/encriptador.webp"
-            alt="Imagen de aplicacion web para encriptar texto">
-        </div>
-        <div class="text-project">
-          <h4>Encriptador de texto - Challenge ONE</h4>
-          <p>Este encriptador de texto es una actividad recomendada de realizar por el
-            programe G6 ONE. La idea es poner
-            en práctica
-            lo aprendido con este challenge.</p>
-          <div>
-            <a id="profile-link" href="https://github.com/alexanderpolanco/chanllage-one-encriptador/tree/main"
-              target="_blank" class="button contrast-button">
-              <svg class="size-6" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                <path
-                  d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5">
-                </path>
-              </svg>
-              Code
-            </a>
-            <a href="https://alexanderpolanco.github.io/chanllage-one-encriptador/" target="_blank"
-              class="button contrast-button">
-              <svg class="size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"></path>
-                <path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"></path>
-              </svg>
-              Preview
-            </a>
+      <div class="container-projects">
+        <div class="group-project">
+          <div class="img-project">
+            <img src="./assets/banner-aluraflix.webp" alt="Imagen de la aplicacion Aluraflix (Clon de Netflix)">
+          </div>
+          <div class="text-project">
+            <h4>AluraFlix - Challenge ONE</h4>
+            <p>En este proyecto final se puso a prueba los conocimientos adquiridos en <a class="text-yellow"
+                href="https://www.aluracursos.com/" target="_blank">Alura
+                Latam</a> y <a class="text-yellow" href="https://www.oracle.com/cl/education/oracle-next-education/"
+                target="_blank">Oracle Next
+                Education.</a> Se
+              construyo un proyecto llamado AluraFlix, la idea del proyecto fue construir un sitio web en el cual se
+              pudieran ver una
+              lista de videos de Alura, clasificados en diversas categorías. La idea general de la interfaz, fue crear
+              una similar a
+              los sitios actuales de streaming, para que el usuario fácilmente pudiera navegar en ella según
+              experiencias previas en
+              otros sitios web.</p>
+            <p>
+              En este proyecto se usó <a class="text-yellow" href="https://es.react.dev/" target="_blank">React JS</a>
+              para
+              crear la interfaz de usuario, para manejar las rutas se usó <a class="text-yellow"
+                href="https://reactrouter.com/en/main" target="_blank">React
+                Router.</a>
+              Adicionalmente se usaron componentes de terceros como lo son: <a class="text-yellow"
+                href="https://www.npmjs.com/package/react-player" target="_blank">React Player</a> y <a
+                class="text-yellow" href="https://www.embla-carousel.com/" target="_blank">Embla
+                carousel</a>, sin
+              embargo,
+              estos
+              componentes fueron adaptados según las necesidades del proyecto.
+            </p>
+            <div>
+              <a id="profile-link" href="https://github.com/alexanderpolanco/challenge-one-aluraflix" target="_blank"
+                class="button contrast-button">
+                <svg class="size-6" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                  stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                  <path
+                    d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5">
+                  </path>
+                </svg>
+                Code
+              </a>
+              <a href="https://challenge-one-aluraflix.pages.dev/" target="_blank" class="button contrast-button">
+                <svg class="size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                  fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                  <path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"></path>
+                  <path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"></path>
+                </svg>
+                Preview
+              </a>
+            </div>
           </div>
         </div>
+
+        <div class="group-project">
+          <div class="img-project">
+            <img src="/assets/banner-alurageek.webp" alt="Imagen de aplicacion web para encriptar texto">
+          </div>
+          <div class="text-project">
+            <h4>AluraGeek - Challenge ONE</h4>
+            <p>Para este proyecto, se construyó una galería de productos dinámica, con la cual el usuario puede
+              interactuar de tal
+              forma que tiene la opción de: agregar, modificar y eliminar un producto. Adicionalmente en el detalle del
+              producto puede
+              calificarlo, esta calificación se ira promediando según el total de las calificaciones obtenidas.</p>
+
+            <p>
+              En este proyecto se usó el <a class="text-yellow"
+                href="https://developer.mozilla.org/es/docs/Web/API/Document_Object_Model/Introduction"
+                target="_blank">DOM</a> para la creación de elementos de forma dinámica. También se creó una API
+              rudimentaria
+              pero funcional, para manejar los datos del <a class="text-yellow"
+                href="https://developer.mozilla.org/es/docs/Web/API/Window/localStorage"
+                target="_blank">localStorage</a> simulando una base de datos NoSQL, para de esta
+              manera manejar
+              más fácil la información de los productos guardados.
+            </p>
+            <div>
+              <a id="profile-link" href="https://github.com/alexanderpolanco/challenge-one-alurageek" target="_blank"
+                class="button contrast-button">
+                <svg class="size-6" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                  stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                  <path
+                    d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5">
+                  </path>
+                </svg>
+                Code
+              </a>
+              <a href="https://alexanderpolanco.github.io/challenge-one-alurageek/" target="_blank"
+                class="button contrast-button">
+                <svg class="size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                  fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                  <path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"></path>
+                  <path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"></path>
+                </svg>
+                Preview
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="group-project">
+          <div class="img-project">
+            <img src="./assets/encriptador.webp" alt="Imagen de aplicacion web para encriptar texto">
+          </div>
+          <div class="text-project">
+            <h4>Encriptador de texto - Challenge ONE</h4>
+            <p>Este encriptador de texto es una actividad recomendada de realizar por el
+              programe G6 ONE. La idea es poner
+              en práctica
+              lo aprendido con este challenge.</p>
+            <div>
+              <a id="profile-link" href="https://github.com/alexanderpolanco/challenge-one-encriptador" target="_blank"
+                class="button contrast-button">
+                <svg class="size-6" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                  stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                  <path
+                    d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5">
+                  </path>
+                </svg>
+                Code
+              </a>
+              <a href="https://alexanderpolanco.github.io/chanllage-one-encriptador/" target="_blank"
+                class="button contrast-button">
+                <svg class="size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                  fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                  <path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"></path>
+                  <path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"></path>
+                </svg>
+                Preview
+              </a>
+            </div>
+          </div>
+        </div>
+
+      </div>
       </div>
     </section>
     <section id="certifications">
@@ -196,6 +303,7 @@
         <h3 class="experience-tile">Licencias y certificaciones</h3>
       </div>
       <div class="group-certifications">
+
         <div class="container-certifications">
           <div class="container-logo-certificartion">
             <img width="48" src="./assets/alura_latam_logo.webp" loading="lazy" height="48"
@@ -203,12 +311,37 @@
           </div>
           <div class="details-certification">
             <span>
-              <h5 class="title-certification">CSS: Flexbox y loyouts responsivos</h5>
+              <h5 class="title-certification">Oracle Cloud Infrastructure: base de datos e infraestructura como código
+              </h5>
             </span>
             <span>Alura Latam</span>
-            <span>Expedición: abr. 2024</span>
-            <span>ID de la credencial 7384a12e-2c70-4bf0-87f0-17185d29616a</span>
-            <a href="https://app.aluracursos.com/certificate/7384a12e-2c70-4bf0-87f0-17185d29616a?lang" target="_blank"
+            <span>Expedición: ago. 2024</span>
+            <span>ID de la credencial fa23de6e-ae78-4731-ac7e-f9863652a857</span>
+            <a href="https://app.aluracursos.com/certificate/fa23de6e-ae78-4731-ac7e-f9863652a857?lang" target="_blank"
+              class="button contrast-button">
+              Mostrar credencial
+              <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" viewBox="0 0 64 64" fill="currentColor"
+                width="14" height="14">
+                <path d="M53 56H8V11h22V3H0v61h61V34h-8z" />
+                <path d="m42 0 8 8-17 17 6 6 17-17 8 9V0z" />
+              </svg>
+            </a>
+          </div>
+        </div>
+
+        <div class="container-certifications">
+          <div class="container-logo-certificartion">
+            <img width="48" src="./assets/alura_latam_logo.webp" loading="lazy" height="48"
+              alt="Logotipo de Alura Latam" class="border-logo-certificartion">
+          </div>
+          <div class="details-certification">
+            <span>
+              <h5 class="title-certification">Administración de MySQL: Seguridad y optimización de la base de datos</h5>
+            </span>
+            <span>Alura Latam</span>
+            <span>Expedición: ago. 2024</span>
+            <span>ID de la credencial 7db0459f-50c1-4063-af9a-1cba9de105b5</span>
+            <a href="https://app.aluracursos.com/certificate/7db0459f-50c1-4063-af9a-1cba9de105b5?lang" target="_blank"
               class="button contrast-button">
               Mostrar credencial
               <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" viewBox="0 0 64 64" fill="currentColor"
