Fix URL image banner-alurageek

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
         <div class="group-project">
           <div class="img-project">
-            <img src="/assets/banner-alurageek.webp" alt="Imagen de aplicacion web para encriptar texto">
+            <img src="./assets/banner-alurageek.webp" alt="Imagen de aplicacion web para encriptar texto">
           </div>
           <div class="text-project">
             <h4>AluraGeek - Challenge ONE</h4>
