Update meta description

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portfolio Web Developer - Alexander Polanco</title>
   <meta name="content" content="Portfolio Web Developer - Alexander Polanco" />
-  <meta name="description"
-    content="Porfolio construido como proyecto final para obtener el certificado de Oracle Next Education">
+  <meta name="description" content="Portfolio Web Developer - Alexander Polanco">
   <!--REVISAR CUNADO SE TENGA EL DOMINIO DE LA PAGINA-->
   <link rel="canonical" href="https://alexanderpolanco.github.io/chanllage-one-portfolio/" />
   <!-- AGREGA EL ICONO DE LA PAGINA
